Improve code quality: grammar, naming, and code style
- Fix grammar in README.md (lookup -> look up)
- Rename AcmeApiWebfluxApplication to AcmeApiWebFluxApplication for proper capitalization
- Improve code style and clarity across integration tests
- Update comments and documentation for consistency
- Refine test code readability